--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -4,4 +4,4 @@ COPY . src
 
 RUN cd src && ./build.sh
 
-CMD ["/usr/bin/perl", "-I", "/srv/uahttp", "/srv/uahttp/uaHTTP", "server", "server"]
+CMD ["/usr/bin/perl", "-I", "/srv/uahttp", "/srv/uahttp/uaHTTP"]
